- add client pinging to prevent ws disconnecting behind the proxy - add refresh button to board ui

--- a/frontend/src/app/components/board/board.component.scss
+++ b/frontend/src/app/components/board/board.component.scss
@@ -7,7 +7,7 @@
 
 .toolbar {
     display: grid;
-    grid-template-columns: auto auto 1fr auto auto;
+    grid-template-columns: auto auto 1fr auto auto auto;
     grid-column-gap: 0.6rem;
 
     .score {
